@startuml

title __LOGIN's Class Diagram__\n

  namespace survival2d {
    namespace login {
      class survival2d.login.UserLoginController {
          {static} + DEFAULT_RANDOM_USERNAME_LENGTH : int
          + handle()
          - createUser()
          - encodePassword()
          - loginWithAuth()
          - loginWithoutAuth()
      }
    }
  }
  

  namespace survival2d {
    namespace login {
      class survival2d.login.UserRemovedController {
          - responseFactory : EzyResponseFactory
          + handle()
      }
    }
  }
  

  survival2d.login.UserLoginController -up-|> com.tvd12.ezyfoxserver.controller.EzyAbstractPluginEventController
  survival2d.login.UserLoginController o-- survival2d.login.service.UserService : userService
  survival2d.login.UserRemovedController -up-|> com.tvd12.ezyfoxserver.controller.EzyAbstractAppEventController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
